add order page methods and data controls

--- a/RMS/RMS/Web.config
+++ b/RMS/RMS/Web.config
@@ -21,4 +21,7 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="Restaurant" connectionString="Data Source=(localdb)\MSSQLlocalDB; Initial Catalog=Restaurant; Integrated Security=SSPI"/>
+  </connectionStrings>
 </configuration>
