--- a/RMS/RMS/Web.config
+++ b/RMS/RMS/Web.config
@@ -22,6 +22,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Restaurant" connectionString="Data Source=(localdb)\MSSQLlocalDB; Initial Catalog=Restaurant; Integrated Security=SSPI"/>
+    <add name="Restaurant" connectionString="Data Source=(localdb)\MSSQLlocalDB; Initial Catalog=Restaurant; Integrated Security=SSPI; MultipleActiveResultSets=True;"/>
   </connectionStrings>
 </configuration>
